sistemati titoli e open graph dopo feedback progetto

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,10 +2,13 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta property="og:title" content="Il mio sito web personale - Contatti ">
+    <meta property="og:description" content="Dai un'occhiata al mio sito.
+    Questa è un form da compilare per contattarmi ma all'interno del sito troverai molto altro. 
+    Ti Aspetto">
+    <meta property="og:image" content="https://lorycaste98.github.io/progetto-html-css/assets/images/icons/logo.svg">
+
     <link rel="stylesheet" href="../assets/styles/css/contact.css"/>
     <link rel="stylesheet" href="../assets/styles/css/content.css"/>
     <link rel="stylesheet" href="../assets/styles/css/footer.css"/>
@@ -49,6 +52,10 @@
         </a>
       </div>
     </header>
+
+    <section class="first-row">
+      <h1>CONTATTAMI</h1>
+    </section>
 
     <div class="contact-form">
       <form action="#" method="post">
