--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta property="og:title" content="Il mio sito web personale - Homepage ">
+    <meta property="og:description" content="Dai un'occhiata al mio sito.
+    Questa è la mia homepage e troverai delle informazioni su di me e sul mio lavoro. 
+    Ti Aspetto">
+    
+    <meta property="og:image" content="https://lorycaste98.github.io/progetto-html-css/assets/images/icons/logo.svg">
     <link rel="stylesheet" href="assets/styles/css/contact.css" />
     <link rel="stylesheet" href="assets/styles/css/content.css" />
     <link rel="stylesheet" href="assets/styles/css/footer.css" />
@@ -85,9 +88,13 @@
       </div>
     </section>
 
+    <section class="first-row">
+      <h1>LA MIA STORIA</h1>
+    </section>
+
     <section>
       <div class="paragraph">
-        <h1>CHI SONO?</h1>
+        <h2>CHI SONO?</h2>
         <p>
           Ciao, il mio nome è Lorenzo Castelletti e sono uno studente di
           Start2Impact in
