--- a/skills/index.html
+++ b/skills/index.html
@@ -2,10 +2,13 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta property="og:title" content="Il mio sito web personale - Competenze ">
+    <meta property="og:description" content="Dai un'occhiata al mio sito.
+    Questa è un elenco delle competenze ma all'interno del sito troverai molto altro. 
+    Ti Aspetto">
+    <meta property="og:image" content="https://lorycaste98.github.io/progetto-html-css/assets/images/icons/logo.svg">
+
     <link rel="stylesheet" href="../assets/styles/css/contact.css" />
     <link rel="stylesheet" href="../assets/styles/css/content.css" />
     <link rel="stylesheet" href="../assets/styles/css/footer.css" />
@@ -61,11 +64,14 @@
       </div>
     </header>
 
+    <section class="first-row">
+      <h1>COMPETENZE</h1>
+    </section>
+
     <section class="paragraph">
       <div>
-        <h2>COMPETENZE</h2>
+        <h2>LINGUE STRANIERE</h2>
       </div>
-      <h3>Conoscenza lingue straniere:</h3>
       <div class="grid-skills">
         <div class="skills">
           <div>
@@ -92,6 +98,8 @@
           </div>  
         </div>  
       </div> 
+      <h2>INFORMATICA</h2>
+      </div>
       <h3>Sistemi operativi:</h3>
       <div class="grid-skills">
         <div class="skills">
