sistemati link esterni e meta og

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    <meta property="og:title" content="Il mio sito web personale - Homepage ">
-    <meta property="og:description" content="Dai un'occhiata al mio sito.
-    Questa è la mia homepage e troverai delle informazioni su di me e sul mio lavoro. 
-    Ti Aspetto">
     
+    <!--Tag Open Graph-->
+    <meta property="og:locale" content="it">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Lorenzo Castelletti - Homepage">
+    <meta property="og:description" content="Full Stack Developer
+    Questo è il mio sito web. Dai un'occhiata">
     <meta property="og:image" content="https://lorycaste98.github.io/progetto-html-css/assets/images/icons/logo.svg">
+
     <link rel="stylesheet" href="assets/styles/css/contact.css" />
     <link rel="stylesheet" href="assets/styles/css/content.css" />
     <link rel="stylesheet" href="assets/styles/css/footer.css" />
@@ -166,35 +169,28 @@
         <a name="contacts" href="contact/"><button>SCRIVIMI !</button></a>
         <p>o visita i miei social</p>
       </div>
+
       <div class="middle-section">
-        <a href="https://www.instagram.com/lorycastelletti/" target="_blank">
-          <img src="assets/images/icons/instagram.svg" alt="instagram logo"
-        /></a>
-        <a
-          href="https://www.linkedin.com/in/lorenzo-castelletti-532b9b191/"
-          target="_blank"
-        >
-          <img src="assets/images/icons/linkedin.svg" alt="linkedin logo"
-        /></a>
-        <a href="https://github.com/Lorycaste98" target="_blank">
-          <img src="assets/images/icons/github.svg" alt="github logo"
-        /></a>
-        <a
-          href="https://open.spotify.com/user/21recw65jk3fvspadgve6ciui"
-          target="_blank"
-        >
-          <img src="assets/images/icons/spotify.svg" alt="spotify logo"
-        /></a>
+        <a href="https://www.instagram.com/lorycastelletti/" target="_blank" rel="noopener">
+          <img src="assets/images/icons/instagram.svg" alt="instagram logo"/>
+        </a>
+        <a href="https://www.linkedin.com/in/lorenzo-castelletti-532b9b191/" target="_blank" rel="noopener">
+          <img src="assets/images/icons/linkedin.svg" alt="linkedin logo"/>
+        </a>
+        <a href="https://github.com/Lorycaste98" target="_blank" rel="noopener">
+          <img src="assets/images/icons/github.svg" alt="github logo"/>
+        </a>
+        <a href="https://open.spotify.com/user/21recw65jk3fvspadgve6ciui" target="_blank" rel="noopener">
+          <img src="assets/images/icons/spotify.svg" alt="spotify logo"/>
+        </a>
       </div>
 
       <div class="lower-section">
         <div>
-          <a href="https://www.start2impact.it/" target="_blank"
-            ><img
-              class="university-logo"
-              src="assets/images/icons/s2i.svg"
-              alt="start 2 impact logo" /><br
-          /></a>
+          <a href="https://www.start2impact.it/" target="_blank" rel="noopener">
+            <img class="university-logo" src="assets/images/icons/s2i.svg"
+              alt="start 2 impact logo" /><br/>
+            </a>
         </div>
         <div>
           <p>
