sistemato collegamenti che non caricavano immagini

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -202,23 +202,23 @@
 
       <div class="middle-section">
         <a href="https://www.instagram.com/lorycastelletti/" target="_blank" rel="noopener">
-          <img src="assets/images/icons/instagram.svg" alt="instagram logo"/>
+          <img src="../assets/images/icons/instagram.svg" alt="instagram logo"/>
         </a>
         <a href="https://www.linkedin.com/in/lorenzo-castelletti-532b9b191/" target="_blank" rel="noopener">
-          <img src="assets/images/icons/linkedin.svg" alt="linkedin logo"/>
+          <img src="../assets/images/icons/linkedin.svg" alt="linkedin logo"/>
         </a>
         <a href="https://github.com/Lorycaste98" target="_blank" rel="noopener">
-          <img src="assets/images/icons/github.svg" alt="github logo"/>
+          <img src="../assets/images/icons/github.svg" alt="github logo"/>
         </a>
         <a href="https://open.spotify.com/user/21recw65jk3fvspadgve6ciui" target="_blank" rel="noopener">
-          <img src="assets/images/icons/spotify.svg" alt="spotify logo"/>
+          <img src="../assets/images/icons/spotify.svg" alt="spotify logo"/>
         </a>
       </div>
 
       <div class="lower-section">
         <div>
           <a href="https://www.start2impact.it/" target="_blank" rel="noopener">
-            <img class="university-logo" src="assets/images/icons/s2i.svg"
+            <img class="university-logo" src="../assets/images/icons/s2i.svg"
               alt="start 2 impact logo" /><br/>
             </a>
         </div>
